--- a/stvsystem/stvsystem/Views/Credential/Index.cshtml
+++ b/stvsystem/stvsystem/Views/Credential/Index.cshtml
@@ -1,7 +1,128 @@
-﻿
-@{
-    ViewData["Title"] = "Index";
+﻿@{
+    ViewData["Title"] = "Գաղտնաբառեր";
 }
 
-<h2>Index</h2>
+@if (Model != null && Model.SelectionStatus == (stvsystem.Data.SettingStatus)1)
+{
+    @model stvsystem.Data.Setting
+    <div class="for-Toolbar">
+        @(Html.Kendo().ToolBar()
+        .Name("ToolBar")
+        .Items(items =>
+        {
+            items.Add().Template("<button type=\"button\" name=\"Details\" onclick=\"Detalis()\" class=\"btn btn-primary btn-sm\"><i class=\"fa fa-file-pdf-o\"></i>&nbsp; Տպել</button>");
+            items.Add().Template("<input id=\"start\" type=\"number\" placeholder=\"սկիզբ\" class=\"k-textbox\" />");
+            items.Add().Template("<input id=\"end\" type=\"number\" placeholder=\"ավարտ\" class=\"k-textbox\" />");
+        })
+        )
+        @* Search Panel - Right Slide *@
+        <div class="right-slidePanel">
+            <div class="slidePanel-Content">
+                <div class="slidePanel-btn">
+                </div>
+                <div class="slidePanel-Content-fields create-item">
+                    <h4>Որոնման դաշտեր</h4>
+                    <div class="form-group margin-10-0">
+                        <input type="number" id="idStr" class="k-textbox width100" />
+                    </div>
+                    <div class="form-group margin-10-0">
+                        <input type="text" id="pass" class="k-textbox width100" />
+                    </div>
+                    <div class="form-group margin-10-0 align-right">
+                        <button type="submit" id="btnSearch" class="btn btn-primary btn-sm" onclick="return Search();"><i class="icons icon-magnifier"></i>&nbsp;Որոնել</button>
+                        <button type="submit" id="btnClear" class="btn btn-secondary btn-sm" onclick="return Clear();"><i class="icons icon-close"></i>&nbsp;Մաքրել</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script type="text/javascript">
+    function Search() {
+        $("#grCredential").data("kendoGrid").dataSource.read();
+        return false;
+    }
+
+    function Clear() {
+        $("#idStr").val("");
+        $("#pass").val("");
+        $("#grCredential").data("kendoGrid").dataSource.read();
+        return false;
+    }
+
+    function getParameters() {
+        return {
+            idStr: $("#idStr").val(),
+            password: $("#pass").val()
+        };
+
+    }
+
+        function Detalis() {
+            var start = $("#start").val();
+            var end = $("#end").val();
+            window.location = '@Url.Action("Detail", "Credential")/?start=' + start + '&end=' + end;
+        }
+
+    @*function InsertCredential() {
+        window.location = '@Url.Action("Template", "Credential")';
+    }*@
+
+    @*function UpdateCredential(e) {
+        var row = $(e.target).closest("tr");
+        var grid = $("#grCredential").data("kendoGrid");
+        var dataItem = grid.dataItem(row);
+        window.location = '@Url.Action("Template", "Credential")/?credentialID=' + dataItem.CredentialID;
+    }*@
+
+    @*function DeleteCredential(e) {
+        var row = $(e.target).closest("tr");
+        var grid = $("#grCredential").data("kendoGrid");
+        var dataItem = grid.dataItem(row);
+        window.location = '@Url.Action("DeleteConfirmation", "Credential")/?credentialID=' + dataItem.CredentialID;
+    }*@
+    </script>
+
+    @(Html.Kendo().Grid<stvsystem.Data.CredentialItem>()
+                  .Name("grCredential")
+                  .NoRecords(n => n.TemplateId("no-records-template-id"))
+                  .Columns(columns =>
+                  {
+                      columns.Bound(c => c.CredentialID).Width(100);
+                      columns.Bound(c => c.Password);
+                      //columns.Command(commands =>
+                      //{
+                      //    commands.Custom("cmdUpdateCredential").Text(" ").Click("UpdateCredential").HtmlAttributes(new { @class = "Update_Icon" });
+                      //    commands.Custom("cmdDeleteCredential").Text(" ").Click("DeleteCredential").HtmlAttributes(new { @class = "Delete_Icon" });
+                      //}).Title("Հրամաններ").Width(120);
+                  })
+                  .Events(e => e.DataBound("showCommandIcons"))
+                  .Sortable()
+                  .Resizable(resize => resize.Columns(true))
+                  .Scrollable()
+                  .Reorderable(reorder => reorder.Columns(true))
+                  .Pageable(pager => pager.PageSizes(new[] { 10, 15, 25, 50, 100 }))
+                  .DataSource(dataSource => dataSource
+                      .Ajax()
+                      .Events(events => events.Error("error_handler"))
+                      .Read(read => read.Action("FilterCredential", "Credential").Data("getParameters"))
+                  )
+    )
+    <script id="no-records-template-id" type="text/x-kendo-template">
+        <div class="k-grid-norecords-template">Գրառումներ առկա չեն</div>
+    </script>
+}
+else
+{
+    <div class="container-maxwidth500">
+        <div class="card card-accent-warning">
+            <div class="card-header">
+                Ուշադրություն
+            </div>
+            <div class="card-body">
+                Ծածկագրերը դիտման և տպագրման համար ներկա փուլում հասանելի չեն
+            </div>
+        </div>
+    </div>
+}
 
