--- a/stvsystem/stvsystem/Views/Setting/Template.cshtml
+++ b/stvsystem/stvsystem/Views/Setting/Template.cshtml
@@ -14,7 +14,7 @@
             <div class="card-body">
                 <div class="form-group">
                     @Html.LabelFor(model => model.SelectionName, new { @class = "control-label" })
-                    @Html.Kendo().TextBoxFor(model => model.SelectionName).HtmlAttributes(new { @class = "form-control" })
+                    @Html.Kendo().TextBoxFor(model => model.SelectionName).HtmlAttributes(new { @class = "form-control", maxlength = "50" })
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(model => model.SelectionDate, new { @class = "control-label" })
