--- a/stvsystem/stvsystem/Views/Monitoring/Complete.cshtml
+++ b/stvsystem/stvsystem/Views/Monitoring/Complete.cshtml
@@ -1,7 +1,34 @@
-﻿
-@{
-    ViewData["Title"] = "Complete";
+﻿@using  stvsystem.Data
+@model SettingItem
+
+@using (Html.BeginForm("FinishSelection", "Monitoring", FormMethod.Post, new { id = "frmComplete" }))
+{
+    @if (Model.SelectionStatus == SettingStatus.InProcess)
+    {
+        <div class="container-maxwidth500">
+            <div class="card">
+                <div class="card-header">
+                    Ցանկանում եք ավարտել քվեարկությունը
+                </div>
+                <div class="card-footer">
+                    <button type="submit" id="SubmitButton" class="btn btn-sm btn-success"><i class="icons icon-arrow-right"></i>&nbsp;Ավարտել</button>
+                    <button type="button" class="btn btn-sm btn-secondary" onclick="location.href='@Url.Action("Index", "Monitoring")'"><i class="icons icon-close"></i>&nbsp;Չեղարկել</button>
+                </div>
+            </div>
+        </div>
+    }
+    else if (Model.SelectionStatus == SettingStatus.Finished)
+    {
+        <p>Քվեարկությունը ավարտված է</p>
+    }
+    else
+    {
+        <p>Քվեարկությունը դեռ չի սկսվել</p>
+    }
+
+
+
 }
 
-<h2>Complete</h2>
+
 
