--- a/stvsystem/stvsystem/Views/Monitoring/Index.cshtml
+++ b/stvsystem/stvsystem/Views/Monitoring/Index.cshtml
@@ -1,7 +1,38 @@
-﻿
-@{
-    ViewData["Title"] = "Index";
+﻿@using  stvsystem.Data
+@model SettingItem
+
+@(Html.Kendo().Chart<stvsystem.Data.CredentialStatisticItem>()
+                                              .Name("internetUsersChart")
+                                              .DataSource(dataSource => dataSource
+                                                  .Read(read => read.Action("GetCredentialStatistics", "Monitoring"))
+                                              )
+                                              .Series(series =>
+                                              {
+                                                  series.Column(d => d.StatusCount)
+                                                        .Name("Կարգավիճակ");
+                                              })
+                                              .CategoryAxis(axis => axis
+                                                  .Categories(model => model.StatusName)
+                                              )
+)
+
+<script type="text/javascript">
+    function Search() {
+        $("#internetUsersChart").data("kendoChart").dataSource.read();
+        return false;
+    }
+</script>
+
+@if (Model.SelectionStatus == SettingStatus.InProcess)
+{
+    <input type="button" value="Refresh Page" onClick="Search()">
+    <button type="button" class="btn btn-sm btn-secondary" onclick="location.href='@Url.Action("Complete", "Monitoring")'"><i class="icons icon-close"></i>&nbsp;Ավարտել</button>
 }
-
-<h2>Index</h2>
-
+else if (Model.SelectionStatus == SettingStatus.Finished)
+{
+    <p>Քվեարկությունը ավարտված է</p>
+}
+else
+{
+    <p>Քվեարկությունը դեռ չի սկսվել</p>
+}
