--- a/stvsystem/stvsystem/Views/Credential/Index.cshtml
+++ b/stvsystem/stvsystem/Views/Credential/Index.cshtml
@@ -1,9 +1,11 @@
-﻿@{
+﻿@using  stvsystem.Data
+@{
     ViewData["Title"] = "Գաղտնաբառեր";
 }
 
-@if (Model != null && Model.SelectionStatus == (stvsystem.Data.SettingStatus)1)
-{
+@*@if (Model != null && Model.SelectionStatus == (stvsystem.Data.SettingStatus)1)*@
+@if (Model != null && Model.SelectionStatus == SettingStatus.InPreparation)
+    {
     @model stvsystem.Data.Setting
     <div class="for-Toolbar">
         @(Html.Kendo().ToolBar()
