--- a/stvsystem/stvsystem/Views/Selection/Index.cshtml
+++ b/stvsystem/stvsystem/Views/Selection/Index.cshtml
@@ -25,7 +25,9 @@
             </div>
             <div class="card-footer">
                 <button type="submit" id="SubmitButton" class="btn btn-sm btn-primary"><i class="icons icon-check"></i>&nbsp;Մուտք</button>
+                <button type="button" onclick="location.href='@Url.Action("Index", "Selection")'" class="btn btn-sm btn-secondary"><i class="icons icon-close"></i>&nbsp;Չեղարկել</button>
                 @Html.ValidationSummary("Առկա են խնդիրներ")
+
             </div>
         </div>
     </div>
